# screamingv2

./: .gitignore  ProcFile  Procfile  README.md  pyproject.toml  requirements.txt
auth_app/: admin.py  backends.py  forms.py  models.py  tests.py  views.py
auth_app/migrations/: 0001_initial.py  0002_alter_account_profile_image.py
conf/: .env  settings.py  urls.py
err_handler/: apps.py  views.py
notification_app/: admin.py  models.py  views.py
notification_app/migrations/: 0001_initial.py
post_app/: admin.py  forms.py  models.py  views.py
post_app/migrations/: 0001_initial.py
static/custom/: boot.min.css  bootstrap.cust.css  jquery.js  style.css
static/custom/jquery/: date.js  tableClick.js
templates/: comment_buttons.html  dev_message.html  index.html  main.html  notifications.html  post_buttons.html  profile.html
templates/detail_pages/: list_follow.html  list_likes.html  single_post.html
templates/errors/: 400.html  403.html  404.html  500.html
templates/forms/: create.html  edit_profile.html
user_app/: forms.py  views.py
