[tool.poetry]
name = "screaming"
version = "0.1.0"
description = ""
authors = ["rlivermorejr <rlivermorejr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
django-environ = "^0.4.5"
pymongo = {extras = ["srv"], version = "^3.12.0"}
Pillow = "^8.3.1"
sqlparse = "0.2.4"
django-resized = "^0.3.11"
django-countries = "^7.2.1"
django-jquery = "^3.1.0"
heroku = "^0.1.4"
whitenoise = "^6.0.0"
django-on-heroku = "^1.1.2"
gunicorn = "^20.1.0"
djongo = "^1.3.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
